# auditor

./: .gitignore  .spectral.yaml  Makefile  api_call_summary.csv  config.yaml  missing_schema_property_types.txt  openapi_final_patch.yaml  openapi_ref_siblings_fixed.yaml  package-lock.json  rename_log.txt  requirements.txt  spectral.yaml
clio_client/: README.md  pyproject.toml
clio_client/apis/: activities_api.py  calendar_entries_api.py  clients_api.py  contacts_api.py  custom_fields_api.py  documents_api.py  matters_api.py  notes_api.py  practice_areas_api.py  tasks_api.py  users_api.py
clio_client/models/: __init__.py  account_balance_base.py  activity.py  activity_activity_description.py  activity_base.py  activity_base_tax_setting.py  activity_base_type.py  activity_bill.py  activity_calendar_entry.py  activity_client_portal.py  activity_communication.py  activity_contact_note.py  activity_description.py  activity_description_base.py  activity_description_rate.py  activity_description_rate_base.py  activity_description_rate_base_hierarchy.py  activity_description_rate_base_type.py  activity_description_utbms_activity.py  activity_description_utbms_task.py  activity_descriptioncreate_data_body.py  activity_descriptioncreate_data_body_data.py  activity_descriptioncreate_data_body_data_rate.py  activity_descriptioncreate_data_body_data_rate_type.py  activity_descriptioncreate_files_body.py  activity_descriptioncreate_files_body_data.py  activity_descriptioncreate_files_body_data_rate.py  activity_descriptioncreate_files_body_data_rate_type.py  (+1530 more)
openapi/: openapi  (+7 more)
(+4657 files in other folders)
